# visual-autolabel

./: Dockerfile  Generate_data.ipynb  LICENSE  README.md  docker-compose.yml  gendata.py  module_randomwalk.py  multiprocess_labeling.py  notebook-newscore.ipynb  notebook.ipynb  prf-mapfill.ipynb  pyproject.toml  randomwalk.py  run_handlabel_score.sbatch  run_multi_subjects.sbatch  starting_guess.py  train-unet.ipynb  train_resnet.ipynb  training_sids.json  validate_sids.json  visual_autolabe_apply.py
archive/: generate-data.ipynb  lines-unet-notebook.ipynb  random-walk-v1.ipynb  training_sids.json  validate_sids.json
archive/scripts/: run_multi_subjects.sbatch  score_handlabeled.py
benson2025/: README.md  analysis.ipynb
benson2025/hyperparameters/: Dockerfile  README.md  config.env  grid-params.json
docker/: npythyrc.json  startup.sh
grid-search/: README.md  docker-compose.yml  grid-params.json  validate_sids.json
grid-search/scripts/: build-gridsearch.sh  docker-run-grid.sh  run-grid.sh
nyu_dataset/: file_describe.txt  model_train.ipynb  nyu_retinotopy_cnns.ipynb
prf_mapmodel/: __init__.py  cmag.py  distributions.py  potentials.py  util.py
pytorch-unet/: autolabel_resnet18_unet.ipynb  train_resnet.ipynb
scripts/: gen-gridparams.py  opts.json  opts_area.json  opts_ring.json  plan.json  run-grid.sh  train.py
src/visual_autolabel/: __init__.py  __main__.py
visual_autolabel/: __init__.py  _graph.py  _image.py  config.py  train.py  util.py
visual_autolabel/apply/: __init__.py
visual_autolabel/benson2024/: __init__.py  _core.py  config.py
(+74 files in other folders)
