[project]
name = "visual_autolabel"
version = "0.1.dev1"
description = """CNN library for automatically labeling the visual cortex"""
authors = [{name="Noah C. Benson", email="nben@uw.edu"},
           {name="Bogeng Song", email="bs4283@nyu.edu"},
           {name="Shaoling Chen", email="sc6995@nyu.edu"}]
license = {"text"="MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["machine learning", "neuroscience", "vision", "MRI"]
classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS']
dependencies = [
    'neuropythy >= 0.12.16',
    'torch >= 2.3',
    'torchvision >= 0.18',
    'matplotlib >= 3.9']

[project.urls]
homepage = "https://github.com/noahbenson/visual-autolabel"
documentation = "https://github.com/noahbenson/visual-autolabel"
repository = "https://github.com/noahbenson/visual-autolabel"
